tests/fail/stacked_borrows/retag_data_race_protected_read.stderr
error: Undefined Behavior: Data race detected between (1) non-atomic read on thread `main` and (2) implicit write from the aliasing model of type `i32` on thread `unnamed-ID` at ALLOC. (2) just happened here
  --> tests/fail/stacked_borrows/retag_data_race_protected_read.rs:LL:CC
   |
LL |         retag(unsafe { &mut *ptr.0 });
   |                        ^^^^^^^^^^^ Data race detected between (1) non-atomic read on thread `main` and (2) implicit write from the aliasing model of type `i32` on thread `unnamed-ID` at ALLOC. (2) just happened here
   |
help: and (1) occurred earlier here
  --> tests/fail/stacked_borrows/retag_data_race_protected_read.rs:LL:CC
   |
LL |     unsafe { ptr.0.read() };
   |              ^^^^^^^^^^^^
   = help: implicit reads/writes happen on all (re)borrows, as well as when references are copied or moved
   = help: implicit accesses permit optimizations that insert speculative reads or writes
   = help: therefore from the perspective of data races, such accesses have the same implications as a read or write
   = help: Tree Borrows might also perform implicit accesses when returning from a function
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE (of the first span) on thread `unnamed-ID`:
   = note: inside closure at tests/fail/stacked_borrows/retag_data_race_protected_read.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

